Added truncation of main header so it doesn't run into external links

--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -62,8 +62,11 @@
       }
     }
 
+    .span9 { margin-left: 0px; }
+
     .header-main {
       display: inline-block;
+      width: 500px;
       .info {
         p {
           margin: 0px;
