--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -20,9 +20,9 @@
                 %p Industry
                 %p.karma{ title: "test tooltip"}Karma score
               .entries
-                %p= profile.current_position
-                %p= profile.organisation
-                %p= profile.career_sector
+                %p= truncate(profile.current_position, length: 45)
+                %p= truncate(profile.organisation, length: 45)
+                %p= truncate(profile.career_sector, length: 45)
                 %p.karma{ title: "test tooltip"}
                   = user.get_karma_score
             .email
