--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -127,6 +127,12 @@
       float: right;
       margin-top: 25px;
       margin-right: 25px;
+      p {
+        margin: 0px;
+        //margin-left: 15px;
+        color: lighten($text_color,35%);
+      }
+      hr { margin: 0px; margin-bottom: 5px; }
       .link {
         margin-bottom: 5px;
         display: block;
