--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -19,26 +19,27 @@
                 %p Organisation
                 %p Industry
                 %p.karma{ title: "test tooltip"}Karma score
+                - if current_user && current_user.eighty_thousand_hours_member?
+                  %p Email
               .entries
                 %p= truncate(profile.current_position, length: 45)
                 %p= truncate(profile.organisation, length: 45)
                 %p= truncate(profile.career_sector, length: 45)
                 %p.karma{ title: "test tooltip"}
                   = user.get_karma_score
-            .email
-              - if current_user && current_user.eighty_thousand_hours_member?
-                %p= user.email
+                - if current_user && current_user.eighty_thousand_hours_member?
+                  %p= user.email
           .buttons
             #contact
               = link_to "Contact", {controller: 'users', action: 'initalise_contact_user', user_id: user.id}, :remote => true, class: "btn btn-danger", id: "contact-btn"
 
-            - if user.external_linkedin
+            - if !user.external_linkedin.nil? && !user.external_linkedin.empty?
               #linkedin-view
                 = link_to image_tag('/assets/linkedin/linkedin_button_reg.gif', size: '160'), user.external_linkedin
 
-            -# if user.linkedin_email != nil
-            #linkedin-add
-              = link_to image_tag('/assets/linkedin/linkedin_button_reg.gif'), {controller: 'authentications', action: 'linkedin_invite_connection', email: user.linkedin_email, user_id: user.id}, remote: false, id: "linkedin-invite-btn"
+            - if !user.linkedin_email.nil? && !user.linkedin_email.empty?
+              #linkedin-add
+                = link_to image_tag('/assets/linkedin/linkedin_button_reg.gif'), {controller: 'authentications', action: 'linkedin_invite_connection', email: user.linkedin_email, user_id: user.id}, remote: false, id: "linkedin-invite-btn"
           #contact-modal
 
         - if user.external_links?
