--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -210,6 +210,7 @@
     }
     #other-members {
       > .body { padding-top: 15px; }
+      .eighty-thousand-hours-profile-condensed-2 { margin-bottom: 5px; }
     }
   }
 }
