--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -108,6 +108,7 @@
               line-height: 22px;
               height: 22px;
             }
+            p.karma { width: 35px; }
           }
         }
       }
