--- a/app/views/etkh_profiles/edit.html.haml
+++ b/app/views/etkh_profiles/edit.html.haml
@@ -16,12 +16,14 @@
       .span4
         .box.sidebar
           #linkedin
+            .header
+              = image_tag("/assets/linkedin/linkedin-logo32.png")
             #pull-profile
               %p Fill in your profile with data from your LinkedIn profile
               - if @linkedin_signup
-                = link_to image_tag('/assets/linkedin/linkedin_button.gif'), {controller: 'authentications', action: 'linkedin_getprofile'}, remote: false, id: "linkedin-profile-btn"
+                = link_to image_tag('/assets/linkedin/linkedin_button.gif', size: '140x30'), {controller: 'authentications', action: 'linkedin_getprofile'}, remote: false, id: "linkedin-profile-btn"
               - else
-                = link_to image_tag('/assets/linkedin/linkedin_button.gif', id: "btn-update-profile"), remote: true
+                = link_to image_tag('/assets/linkedin/linkedin_button.gif', size: '140x30', id: "btn-update-profile"), remote: true
             - if !@linkedin_signup || @new_profile
               #linkedin-modal
                 = render partial: 'linkedin_modal', locals: { linkedin_signup: @linkedin_signup }
