--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -13,7 +13,7 @@
 :javascript
   $("#members-list").pageless({
     totalPages: 10,
-    url: '/members',
+    url: '/members/get_more_members',
     //msgStyles: {'color': '#000000', 'font-size': '1em'},
     //loaderMsg: 'Loading more results',   
     loaderImg: '/images/load.gif',
