--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -1,3 +1,4 @@
+= javascript_include_tag "members-page.js"
 .span10
   .heading
     %h1 Our members
@@ -8,47 +9,3 @@
 
   #members-list
     = render partial: 'profiles_selection', locals: { users: @selected_users }
-
-
-:javascript
-  $("#members-list").pageless({
-    totalPages: 10,
-    url: '/members/get_more_members',
-    //msgStyles: {'color': '#000000', 'font-size': '1em'},
-    //loaderMsg: 'Loading more results',   
-    loaderImg: '/images/load.gif',
-    distance: '2500'
-  });
-
-  $(document).ready( function() {
-    // set image dimensions to avoid stretching
-    // short delay to allow images to load
-    setTimeout( function() {
-      resizeImages();
-    }, 250);
-
-    // since this page takes a long time to load all the images, redo the resize images function to make sure all images are resized correctly
-    setTimeout( function() {
-      resizeImages();
-    }, 500);
-    setTimeout( function() {
-      resizeImages();
-    }, 1000);
-  });
-
-  function resizeImages()
-  {
-    $(".avatar").find("img").each( function() {
-      var img = new Image();
-      img.src = $(this).attr('src');
-
-      if (img.width > img.height)
-      {
-        $(this).css('height', '100%');
-      }
-      else
-      {
-        $(this).css('width', '100%');
-      }
-    });
-  }
