--- a/app/views/etkh_profiles/_profile_teaser.html.haml
+++ b/app/views/etkh_profiles/_profile_teaser.html.haml
@@ -1,4 +1,7 @@
 - profile = user.etkh_profile
+- if !profile.nil?
+  - background = profile.get_background_snippet(100, 150)
+
 .profile-teaser
   .row-fluid
     .span2
@@ -9,22 +12,25 @@
       .heading
         .name
           = link_to user.name, etkh_profile_path(user)
-        .location
-          %p= user.location
-        .organisation
-          %p= profile.organisation
+        - if !user.location.nil?
+          .location
+            %p= user.location
+        - if !profile.nil? && !profile.organisation.nil?
+          .organisation
+            %p= profile.organisation
         %hr
 
       .body
         .row-fluid
           .span3
             .labels
-              - if !profile.current_position.nil? && !profile.current_position.empty?
+              - if !profile.nil? && !profile.current_position.nil?
                 .position
                   %p Current position
-              .background
-                %p Background
-              - if profile.profile_option_activities.any?
+              - if !profile.nil? && !background.nil?
+                .background
+                  %p Background
+              - if !profile.nil? && profile.profile_option_activities.any?
                 .activities
                   %p Activities
               -# if profile.profile_option_causes.any?
@@ -33,12 +39,13 @@
 
           .span9
             .info
-              - if !profile.current_position.nil? && !profile.current_position.empty?
+              - if !profile.nil? && !profile.current_position.nil? && !profile.current_position.empty?
                 .position
                   %p= profile.current_position
-              .background
-                %p= markdown (profile.get_background_snippet(100, 150) + "... [read more](#{etkh_profile_path(user)})")
-              - if profile.profile_option_activities.any?
+              - if !profile.nil? && !background.nil? && !background.empty?
+                .background
+                  %p= markdown (background + "... [read more](#{etkh_profile_path(user)})")
+              - if !profile.nil? && profile.profile_option_activities.any?
                 .activities
                   - profile.profile_option_activities.limit(4).each_with_index do |activity, index|
                     - if index < 3
