Added fading to search results

--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -7,5 +7,5 @@
 
 :javascript
   $("#search-btn").click( function() {
-    $("#members-list").html("");
+    $("#members-list").fadeOut(800);
   });
