--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -1,20 +1,21 @@
-= form_tag('members/search', remote: true) do
-  = label_tag :name
-  = text_field_tag :name
+.form
+  = form_tag('members/search', remote: true) do
+    .labels
+      = label_tag :name
+      = label_tag :location
+      = label_tag :organisation
+      = label_tag :industry
+      = label_tag :position
 
-  = label_tag :location
-  = text_field_tag :location
+    .inputs
+      = text_field_tag :name
+      = text_field_tag :location
+      = text_field_tag :organisation
+      = text_field_tag :industry
+      = text_field_tag :position
 
-  = label_tag :organisation
-  = text_field_tag :organisation
-
-  = label_tag :industry
-  = text_field_tag :industry
-
-  = label_tag :position
-  = text_field_tag :position
-
-  = submit_tag "Search", name: nil, id: "search-btn"
+    .button
+      = submit_tag "Search", name: nil, id: "search-btn"
 
 
 :javascript
