--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -687,50 +687,50 @@
 //********Members page**********
 
 .members-page {
-  .search-form {
-    margin-bottom: 40px;
-
+  #search-form {
+    @include rounded_borders(rgb(200,200,200),3px,12px);
+    width: 550px;
+    height: 100px;
+    margin: 0px;
+    margin-bottom: 25px;
+    
     .form {
       margin-top: 10px;
       padding: 10px;
+      padding-top: 20px;
 
       .labels {
         display: inline-block;
-        width: 81px;
         margin-left: 15px;
-        > * {
-          margin-bottom: 23px;
-        }
+        label { margin-bottom: 25px; }
       }
       .inputs {
         display: inline-block;
         margin-left: 30px;
-        > * {
+        position: relative;
+        input {
           display: block;
           margin-bottom: 15px;
+          width: 170px;
         }
       }
-      .button {
-        margin-top: 15px;
-        margin-left: 10px;
-      }
-    }
-
-    #simple-search {
+      #hidden-labels, #hidden-inputs { display: none }
       .link {
         display: inline-block;
         margin-left: 10px;
       }
+      .button {
+        display: inline-block;
+        position: relative;
+        margin-left: 10px;
+        .btn.btn-info {
+          @include background-linear-gradient(top,#DD5D8C,#d4346f);
+        }
+      }
     }
+  }  
 
-    #advanced-search {
-      display: none;
-      @include rounded_borders(#CCC, 2px, 11px);
-      background-color: rgb(104,155,233);
-      position: relative;
-      top: -145px;
-
-      
-    }
+  #members-list {
+    position: relative;
   }
 }
