--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -2,21 +2,25 @@
   = form_tag('members/search', remote: true) do
     .labels
       = label_tag :name
-      = label_tag :location
-      = label_tag :organisation
-      = label_tag :industry
-      = label_tag :position
+      #hidden-labels
+        = label_tag :location
+        = label_tag :organisation
+        = label_tag :industry
+        = label_tag :position
 
     .inputs
       = text_field_tag :name
-      = text_field_tag :location
-      = text_field_tag :organisation
-      = text_field_tag :industry
-      = text_field_tag :position
+      #hidden-inputs
+        = text_field_tag :location
+        = text_field_tag :organisation
+        = text_field_tag :industry
+        = text_field_tag :position
 
     .button
-      = submit_tag "Search", name: nil, id: "search-btn"
+      = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-info"
 
+    .link
+      = link_to "Advanced Search", "", remote: true, id: "advanced-search"
 
 :javascript
   $("#search-btn").click( function() {
