--- a/app/assets/stylesheets/shared/_gradients.scss
+++ b/app/assets/stylesheets/shared/_gradients.scss
@@ -1,6 +1,8 @@
 @mixin background-linear-gradient($startPoint, $startColor, $endColor, $startInterval: 0%, $endInterval: 100%) {
     background-color: $startColor;
+    
     background-image: -webkit-linear-gradient($startPoint, $startColor $startInterval, $endColor $endInterval);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop($startInterval, $startColor), color-stop($endInterval, $endColor));
     background-image: -moz-linear-gradient($startPoint, $startColor $startInterval, $endColor $endInterval);
     background-image: -ms-linear-gradient($startPoint, $startColor $startInterval, $endColor $endInterval);
     background-image: -o-linear-gradient($startPoint, $startColor $startInterval, $endColor $endInterval);
