Added loading image to searching

--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -733,4 +733,11 @@
   #members-list {
     position: relative;
   }
+
+  #loading-icon {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+  }
 }
