WIP Implemented static progress bar in edit profile

--- a/app/views/etkh_profiles/edit.html.haml
+++ b/app/views/etkh_profiles/edit.html.haml
@@ -3,6 +3,8 @@
     .row
       .span7
         .box
+          = render partial: 'profile_completeness_bar', locals: { value: 60 }
+
           %h1= current_user.name
           %hr
           
